Attempt 6 at fixing send button on mobile

--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -1466,6 +1466,7 @@
         .wc-send {
             right: 0;
             top: 20px;
+            height: 55px;
         }
 
         .wc-send.hidden {
